--- a/main.tex
+++ b/main.tex
@@ -711,6 +711,12 @@ So, while General Relativity and Unitary Quantum physics disagree about the natu
 Copenhagen statistical interpretation. The hidden variables exist really: it is the Cosmos ! Heisenberg
 relations would be only Fourier transform manifestations of Wave Mechanics.
 
+Note that the above Wien length enters (O.O3 \%):
+\begin{equation}
+l_{CMB} / \lambdabar_e \approx P/a^3 p H 
+\end{equation}
+This confirms the invariance of the CMB Temperature.  
+
 \subsection{The Cosmic Temperature}
 
 In the gravitational hydrogen molecule model, $R$ is defined by the following 1D-2D Special
@@ -1312,6 +1318,7 @@ It is now clear that present mathematics and Particle Physics are incomplete, an
 
       This article leads to some predictions:
 \item 1/  The very large infra-red telescopes in preparation will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the \textit{already refuted} standard evolutionary model.
+\item 1/ The CMB temperature will show invariance
 \item 2/ The Particle Physics will integrate the Koide relation and introduce massive gluons and composite quark down.
 \item 3/ Informatics software should  be boosted by the principle of multi-base computation.
 \item 4/ The multiple connexions with the DNA chain seems to imply it is a 1D hologram. Recent studies \cite{Widom} are on this way. 
