--- a/main.tex
+++ b/main.tex
@@ -79,63 +79,65 @@ with emphasis on the $10^{61}$ Trans-Plankian Quantized time, the Kotov's period
 
 \markboth{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}{\thepage}
 
-Contents
+\tableofcontents
 
-1. The Principles of Hierarchy and Computation
+%Contents
 
-2. The Cosmic Fine-Tuning and the Topological Axis
+%1. The Principles of Hierarchy and Computation
 
-3. The Toponic Holographic Quantification
+%2. The Cosmic Fine-Tuning and the Topological Axis
 
-4. The Tachyonic Flickering Space-Time-Matter}
+%3. The Toponic Holographic Quantification
 
-~~~   4.1. The Single Electron Cosmology
+%4. The Tachyonic Flickering Space-Time-Matter}
+
+%~~~   4.1. The Single Electron Cosmology
    
-~~~    4.2. The Coherent Cosmic Oscillation (CCO)
+%~~~    4.2. The Coherent Cosmic Oscillation (CCO)
    
-~~~    4.3. The omnipresence of CCO in astropphysics
+%~~~    4.3. The omnipresence of CCO in astropphysics
    
-~~~    4.4 The Tifft, Arp and Pionner effects
+%~~~    4.4 The Tifft, Arp and Pionner effects
    
-5. The Logic of Dimensional Analysis
+%5. The Logic of Dimensional Analysis
 
-6. The Arithmetical Logic: Holic Principle
+%6. The Arithmetical Logic: Holic Principle
 
-7. The Special Holographic Relations
+%7. The Special Holographic Relations
 
-~~~    7.1. The Conservation of Information
+%~~~    7.1. The Conservation of Information
    
-~~~    7.2. The Cosmic Temperature
+%~~~    7.2. The Cosmic Temperature
 
-~~     7.3. The Holic Principle and CCO 
+%~~     7.3. The Holic Principle and CCO 
     
-8. The role of Intermediary Mathematical Constants
+%8. The role of Intermediary Mathematical Constants
 
-~~~    8.1. The Eddington's constant 137
+%~~~    8.1. The Eddington's constant 137
    
-~~~    8.2. The Atiyah and Sternheimer constants
+%~~~    8.2. The Atiyah and Sternheimer constants
    
-~~~    8.3. The ubiquity of $a^a$
+%~~~    8.3. The ubiquity of $a^a$
    
-~~~    8.4. The intervention of Sporadic Groups
+%~~~    8.4. The intervention of Sporadic Groups
    
- 9. The Fine-Tuning with basic mathematical constants
+% 9. The Fine-Tuning with basic mathematical constants
  
-~~~    9.1. The optimal calculatio base $e$ confirmed
+%~~~    9.1. The optimal calculatio base $e$ confirmed
    
-~~~    9.2. The Lenz-Wyler's Formula
+%~~~    9.2. The Lenz-Wyler's Formula
    
-~~~    9.3. The Archimedes constant $\pi$ as a calculation base
+%~~~    9.3. The Archimedes constant $\pi$ as a calculation base
    
-~~~    9.4. The Four Force Unification in ppb Fine-Tuning
+%~~~    9.4. The Four Force Unification in ppb Fine-Tuning
    
-~~~    9.5. The Heavy Leptons Fine-Tuning
+%~~~    9.5. The Heavy Leptons Fine-Tuning
    
- 10. Discussion
+% 10. Discussion
  
- 11. Conclusions: Cosmic Simplicity at work
+% 11. Conclusions: Cosmic Simplicity at work
  
- 12. Predictions
+% 12. Predictions
     
 
 \section{The Principles of Hierarchy and Computation}
