--- a/main.tex
+++ b/main.tex
@@ -79,7 +79,7 @@ with emphasis on the $10^{61}$ Trans-Plankian Quantized time, the Kotov's period
 
 \markboth{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}{\thepage}
 
-\tableofcontents
+%\tableofcontents
 
 %Contents
 
