--- a/main.tex
+++ b/main.tex
@@ -60,8 +60,7 @@ $^9$Lecturer at Ecole Nationale Superieure d'Architecture Paris Malaquais, Franc
 \hfill To the memory of Sir Michael Atiyah\\
 The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, inverting the anthropic principle and interpretating the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the holographic principle, defining Grandcosmos, breaks the Planck wall by a factor of $10^{61}$, resolving at last the vacuum energy dilemma. 
 The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, implying the Eddington's constant 137 together with  the Atiyah's constant, showing Four Force Unification.
-The Particle Physics must unlock by according Eddington's, Wyler's, Atiyah's and Sernheiemer's approches to Holic Principle, 
-with emphasis on the $10^{61}$ Trans-Plankian Quantized time, the Kotov's period, the Tifft's speed, the Koide-Sanchez constant, the Brannen matrix, the massive gluons and composite d quark. Cosmology must deblock by the oberving mature galaxies instead of that 'dark space' predicted by using the imperfect cosmological principle.  
+The Holic Principle, Eddington's, Wyler's, Atiyah's and Sternheimer's approaches  must unlock the Particle Physics, with emphasis on the $10^{61}$ Trans-Plankian Quantized time, the Kotov's period, the Tifft's speed, the Koide-Sanchez constant, the Brannen matrix, the massive gluons and composite d quark. Standard Cosmology, based on the imperfect cosmological principle will be excluded by the observation of mature galaxies in the very far-field.  
 
 %Mature galaxies will be found in the far-field instead of a dark space, rejecting thus the evolutionary cosmology, ill-founded %o%%n the imperfect cosmological principle.
 
@@ -79,100 +78,98 @@ with emphasis on the $10^{61}$ Trans-Plankian Quantized time, the Kotov's period
 
 \markboth{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}{\thepage}
 
-%\tableofcontents
+Contents
 
-%Contents
+1. The Principles of Hierarchy and Computation
 
-%1. The Principles of Hierarchy and Computation
+2. The Cosmic Fine-Tuning and the Topological Axis
 
-%2. The Cosmic Fine-Tuning and the Topological Axis
+3. The Toponic Holographic Quantification
 
-%3. The Toponic Holographic Quantification
+4. The Tachyonic Flickering Space-Time-Matter}
 
-%4. The Tachyonic Flickering Space-Time-Matter}
-
-%~~~   4.1. The Single Electron Cosmology
+~~~   4.1. The Single Electron Cosmology
    
-%~~~    4.2. The Coherent Cosmic Oscillation (CCO)
+~~~    4.2. The Coherent Cosmic Oscillation (CCO)
    
-%~~~    4.3. The omnipresence of CCO in astropphysics
+~~~    4.3. The omnipresence of CCO in astropphysics
    
-%~~~    4.4 The Tifft, Arp and Pionner effects
+~~~    4.4 The Tifft, Arp and Pionner effects
    
-%5. The Logic of Dimensional Analysis
+5. The Logic of Dimensional Analysis
 
-%6. The Arithmetical Logic: Holic Principle
+6. The Arithmetical Logic: Holic Principle
 
-%7. The Special Holographic Relations
+7. The Special Holographic Relations
 
-%~~~    7.1. The Conservation of Information
+~~~    7.1. The Conservation of Information
    
-%~~~    7.2. The Cosmic Temperature
+~~~    7.2. The Cosmic Temperature
 
-%~~     7.3. The Holic Principle and CCO 
+~~     7.3. The Holic Principle and CCO 
     
-%8. The role of Intermediary Mathematical Constants
+8. The role of Intermediary Mathematical Constants
 
-%~~~    8.1. The Eddington's constant 137
+~~~    8.1. The Eddington's constant 137
    
-%~~~    8.2. The Atiyah and Sternheimer constants
+~~~    8.2. The Atiyah and Sternheimer constants
    
-%~~~    8.3. The ubiquity of $a^a$
+~~~    8.3. The ubiquity of $a^a$
    
-%~~~    8.4. The intervention of Sporadic Groups
+~~~    8.4. The intervention of Sporadic Groups
    
-% 9. The Fine-Tuning with basic mathematical constants
+ 9. The Fine-Tuning with basic mathematical constants
  
-%~~~    9.1. The optimal calculatio base $e$ confirmed
+~~~    9.1. The optimal calculatio base $e$ confirmed
    
-%~~~    9.2. The Lenz-Wyler's Formula
+~~~    9.2. The Lenz-Wyler's Formula
    
-%~~~    9.3. The Archimedes constant $\pi$ as a calculation base
+~~~    9.3. The Archimedes constant $\pi$ as a calculation base
    
-%~~~    9.4. The Four Force Unification in ppb Fine-Tuning
+~~~    9.4. The Four Force Unification in ppb Fine-Tuning
    
-%~~~    9.5. The Heavy Leptons Fine-Tuning
+~~~    9.5. The Heavy Leptons Fine-Tuning
    
-% 10. Discussion
+ 10. Discussion
  
-% 11. Conclusions: Cosmic Simplicity at work
+ 11. Conclusions: Cosmic Simplicity at work
  
-% 12. Predictions
+ 12. Predictions
     
 
 \section{The Principles of Hierarchy and Computation}
-It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, due to the relatively large imprecision on $G$ measurement 10$^{-4}\!$.
+It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, partially due to the relatively large imprecision on $G$ measurement 10$^{-4}\!$.
 
-One can read \cite{Carr}: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependences on $a$ and $a_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from kwown physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
+One can read \cite{Carr}: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependencies on $a$ and $a_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from kwown physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
 
-The existence of relations that are not explained by known physical theories, is called 'natural fine tuning' phenomena. But, as soon as it involves the observable Universe radius, it signals the existence of a more fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed first \cite{Eddy}, must be permanent}. Extending this to the spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology and the basis of Coherent Cosmology \cite{Sanchez1}.
+The existence of relations that are not explained by known physical theories, is called 'natural fine tuning' phenomena. But, as soon as it involves the observable Universe radius, it signals the existence of a more fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed firstly \cite{Eddington}, must be permanent}. Extending this to the spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology and the basis of Coherent Cosmology \cite{Sanchez1}.
 
-So Eddington considered rightly the Cosmic Large Number correlations, as recalled in this article. But the forgetting of Eddington's pioneer work was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed, since, far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Through a so-called Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe \cite{Carr}.
+So Eddington considered rightly the Cosmic Large Number correlations, as recalled in this article. But the rejection of Eddington's pioneer work was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed, since, far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Thus, through the above Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe \cite{Carr}.
 
 The present article shows that \textit{Physics is an unique part of Mathematics, which are presently uncomplete}, refuting the Multiverse Hypothesis by very precise fine-tuning ($10^{-9})$ between main physical and mathematical constants: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, this study confirms the super-string theory but with complete rehabilitation of the \textit{tachyonic} bosonic string theory.
 
-\textit{A decisive point of physics is the energy conservation, the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions: why one asks questions ? We propose that the parameters are optimal basis in a Deterministic Computing Cosmos, and they appear indeed in DNA characteristics and three-point temperatures of mammals and main molecules \cite{Sanchez1}.
+\textit{A decisive point of physics is the energy conservation, the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions: why one asks questions ? We propose that the parameters are optimal base in a Deterministic Computing Cosmos, and they appear indeed in DNA characteristics and triple-point temperatures of mammals and main molecules \cite{Sanchez1}.
 
-\textit{This reinstates the Laplace determinism}, involving non-local hidden variables, which are identified with the Cosmos, so rejecting the Copenhagen statistical interpretation of quantum mechanics.
+\textit{This reinstates the Laplace determinism}, involving non-local hidden variables, which are identified with the Cosmos, so rejecting the standard Copenhagen statistical interpretation of quantum mechanics.
 
-The fact that three parameters, among of about 30, are so clearly emerging means that physics, and more generally science, follows a hierarchical order: \textit{one can progress without knowing the details of the underlying fundamental theory.}
+The fact that three parameters, amongst 30, are so clearly emerging means that physics, and more generally science, follows a hierarchical order: \textit{one can progress without knowing the details of the underlying fundamental theory.}
 
 So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he anticipated genetics. 
 
-In the same manner, this article prefigures \textit{the fundamental theory, but precizing its arithmetical foundation: the Holic Principle}, recalled in section 6. Thus, there must exist multi-base algorithms able to explain the compatibiloity between these two principles, which seems at first sight contradictory. 
+In the same manner, this article prefigures \textit{the fundamental theory, but precizing its arithmetical foundation: the Holic Principle}, recalled in section 6. Thus, there must exist multi-base algorithms able to explain the compatibility between these two principles, which seems at first sight contradictory. 
 
 
 \begin{figure*}
 \centering
 \includegraphics[width=\textwidth,height=14cm]{./figures/figure}
-\caption{The Topological Axis. Double logarithm (y = lnln(Y)) of main dimensionless physical quantities 
-Y corresponds to the String dimension series n = 4k + 2, from k = 0 to k = 7, showing the Cartan-Bott
+\caption{The Topological Axis. Double natural logarithms (y = lnln(Y)) of main dimensionless physical quantities 
+(Y) corresponds to the String dimension series n = 4k + 2, from k = 0 to k = 7, showing the Bott
 periodicity 8 [19] which is at the origin of the name `Topological Axis`. 
 \textit{With unit the Electron Compton wavelength, in the macro-physics side}, the Universe circumference 
-    is tied to bosonic critical dimension 26, while Cartan-Bott reduction leads to n = 18 (thermal photon, 
-    tied to the the mammal wavelength throught the Sternheimer scale factor j), n = 10, (superstring 
+    is tied to the bosonic critical dimension 26, while Bott reduction leads to n = 18 (thermal photon, 
+    tied to the the mammal wavelength through the Sternheimer scale factor j), n = 10, (superstring 
     dimension, Hydrogen atom), and n = 2 (string). For the number 24 of transverse dimensions, it is
-    the Kotov length, through a factor 2$\pi$a, with $a \approx 137.036$. For $n \approx \Gamma $, the Atiyah constant, it is the galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years). For $k \approx e^{2}$, $y\approx 2e$, it is 
+    the Kotov length, through a factor 2$\pi$a, with $a \approx 137.036$. For $n \approx \Gamma $, the Atiyah constant, it means the galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years). For $k \approx e^{2}$, $y\approx 2e$, it is 
     the Grandcosmos radius.
    \textit{With the same unit, the Electron Compton wavelength, in the micro-physics side}, the Space-Time-Matter
     Holic dimension n = 30 is tied to $c$ times the cosmic Supercycle period, while Cartan-Bott reduction lead to the gauge bosons:
@@ -180,7 +177,7 @@ periodicity 8 [19] which is at the origin of the name `Topological Axis`.
     For the superstring n = 10, it is the Pion. For $k \approx \pi$, n $\approx \gamma \times \Gamma$, Y $\approx 496^2$ 
     the square of the Green-Schwarz string dimension and the tenth root of the Monster cardinal, it is
     the Brout-Englert-Higgs boson (125 GeV). For k $\approx 2e^e$, it is the Topon, the visible Universe wavelength,
-    which identifies with the monoradial unit length of the Bekenstein-Hawking Univers entropy.
+    which identifies with the monoradial unit length of the Bekenstein-Hawking Universe entropy.
    \textit{With unit the electron mass}, n = 24 would correspond to the photon mass, while  n $\approx \Gamma$, 
     to the graviton mass.
     \textit{With unit the Kotov length}, the Holic dimension n = 30 corresponds to the Monster cardinal, 
@@ -194,10 +191,10 @@ periodicity 8 [19] which is at the origin of the name `Topological Axis`.
 We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, astrophysics, particle   physics, theoretical physics and mathematics.
 The most famous fine tuning implies cosmic quantities, awkwardly called the `Double
 Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious
-clue in steady-state cosmology based on the \textit{Perfect} Cosmological Principle (spatial \textit{and} temporal homogeneity).
-This Cosmic Fine-Tuning leads directly to a \textit{Gravitational Hydrogen model of the visible universe} \cite{Sanchez1}
-defining the Universe horizon radius: $R = 2a_{G} \lambdabar_{e}$ the factor 2 coming from the two atoms in
-Hydrogen molecule, where 
+clue in the steady-state cosmology based on the \textit{Perfect} Cosmological Principle (spatial \textit{and} temporal homogeneity).
+This Cosmological Fine-Tuning leads directly to a \textit{Gravitational Hydrogen molecule model of the visible universe} \cite{Sanchez1}.
+Defining the Universe horizon radius with $R = 2a_{G} \lambdabar_{e}$ the factor 2 expresses its bi-atomic
+Hydrogen molecule characteristics, where 
 $\lambdabar_{e} = \hbar/cm_{e}$
 is the Electron Compton reduced wavelength, and the
 gravitational coupling constant is: 
@@ -205,10 +202,10 @@ $a_{G} = \hbar c/Gm_{p}m_{H}$
 where $m_p$ and $m_H$ are the proton and hydrogen atom masses.
 So, \textit{the speed $c$ is eliminated}, in accordance with
 Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R \approx 13,812~Gly $, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
-most recent measurement \cite{Bonvin}: 72(3) (km/s)/Megaparsec, which confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower, by $9\%$, value.
+most recent measurements \cite{Bonvin}: 72(3) (km/s)/Megaparsec. The latter confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower value, by $9\%$.
 
 Consider the wavelength of the visible Universe with critical mass $M= Rc^2/2G$: $$\lambdabar_{M} = \hbar /Mc \approx 4 \times 10^{-96} m$$ This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1. The Topological Axis illustrates the function $f(n + 4) = f^{2}(n)$
-and results from the imbrication of relations of the form 
+and stems from the imbrication of relations of the form 
 $
 \lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_{e})^{2}
 $
@@ -225,9 +222,9 @@ $$
 \sim (\lambdabar_{e}/ l_{Gl} )^{64} \sim (\lambdabar_{str} /\lambdabar_{e} )^{128} \sim 2^{256}\\ % 3rd row
 \end{array}
 $$
-which includes the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a string wavelength $\lambdabar_{str}$, with mass about 2 MeV. Thus, the correlation is eightfold,
-including, apart the two ones above, three relations which have been independently reported \cite{Sanchez1}.
-The overall large number $2^{256}$ has an evident computational character, confirmed below by the
+These series include the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a string wavelength $\lambdabar_{str}$, with mass about 2 MeV. Hence, the correlation is eightfold,
+including, apart from the two above relationships, three relations that have been independently reported \cite{Sanchez1}.
+The overall large number $2^{256}$ has an obvious computational characteristic, confirmed below by the
 dramatic appearance of the Eddington Large Number.
 
 In particular, the relation $R/\lambdabar_{e} \sim (\lambda_{CMB} / \lambdabar_{e})^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation which is incompatible with the standard evolutionary cosmology. By this order of magnitude, we infer rather precise relations. With the Hydrogen radius $r_H$, we infer 
@@ -292,7 +289,7 @@ of galaxy groups, with time constant $R/c$ being compensated by the appearance o
 neutrons at rate $c^{3} /Gm_{n}$, corresponding to about one neutron by century in a cathedral volume. The invariant visible Universe radius $R$ is then defined by the
 Schwarszchild relation, so that each point is the center of an equivalent $R$-radius black hole, of
 critical mass $M = Rc^{2} /2G$ and wavelength $\lambdabar_M = \hbar/Mc = 2l_{P}^{2} /R$, the above `Topon`. The Bekenstein-Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
-Principle, untill now devoted to 3D application only \cite{Bousso}:
+Principle, until now devoted to 3D application only \cite{Bousso}:
 \begin{equation}
 S_{BH} = A/4 = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}
 \end{equation}
@@ -713,12 +710,6 @@ So, while General Relativity and Unitary Quantum physics disagree about the natu
 Copenhagen statistical interpretation. The hidden variables exist really: it is the Cosmos ! Heisenberg
 relations would be only Fourier transform manifestations of Wave Mechanics.
 
-Note that the above Wien length enters (O.O3 \%):
-\begin{equation}
-l_{CMB} / \lambdabar_e \approx P/a^3 p H 
-\end{equation}
-This confirms the invariance of the CMB Temperature.  
-
 \subsection{The Cosmic Temperature}
 
 In the gravitational hydrogen molecule model, $R$ is defined by the following 1D-2D Special
@@ -786,7 +777,7 @@ Since Riemann series are tied to the prime number distribution, it seemss odd an
 have not point out the primes appearing in the harmonic series, since it is the single pole. It seems
 that the basic precept `all occurs in the pole` was forgotten in this case. 
 
-As ancient Egyptian used only fractions of type $1/n$, they were certainly aware of this particular harmonic series: 
+As ancient Egyptians used only fractions of type $1/n$, they were certainly aware of this particular harmonic series: 
 $S_{5} = 137/60$
 Indeed it appears in the Ptolemaic approximation for $\pi$: $\pi_{Pt} = 377/120 = 2 +  S_{5}/2$.
 
@@ -897,10 +888,7 @@ Remark that the $12^{th}$ Pell-Fermat number is $ u_1^{12}/2 \approx 140^2 + 1 \
 so connecting $O_M$ and $O_B$, since $61/2 \approx F/a^{2}$ to 0.04 \%, and introducing the next section.
 
 \subsection{The intervention of Sporadic Groups}
-The cardinal orders of the Monster and the Baby-Monster groups enter the supercelerity ratio $Q = R_{GC}/R = C/c$, where $D = 196883$ is the Monster dimension (63  and 2 ppm)
-\begin{equation}
-\pi Q / a \approx O_M D n/H \approx O_B P a^{3/2}
-\end{equation}
+
 The above term $O_M^3$ appears in (0.08\%, 2.5\%,1\%, 2\% and 61 ppm):
 \begin{equation}
 e^{137e}\approx (e/3)e^{ea}\approx O_M^3 \approx 496^{60} \approx fe^{16e^\pi} \approx f^{4d137/\pi}
@@ -1091,12 +1079,7 @@ confirming the holic attribution (section 6) of power 7 for a field parameter, a
 \begin{equation}
 Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \end{equation}
-This value is confirmed by the 30 ppb relation:
-\begin{equation}
-Q = C/c \approx 48 O_M (5/w)^{1/2}
-\end{equation}
-confirming the role of the Planck thermal law.
-The Z value is also confirmed by its ppb liaison with the Janko pariah group $J_3$
+confirmed by its ppb liaison with the Janko pariah group $J_3$
 \begin{equation}
 J_3 \approx 3\pi^2 Z^2 / (137^2 + \sqrt{1+d_e})
 \end{equation}
@@ -1156,11 +1139,12 @@ These numbers enters the following dramatic series, to 1 ppm, 56 ppm, and 13 ppm
 2/\delta = 2a^3/pH \approx ln(pH)/2d_e lna \approx (ln\tau/ln\mu)/d_e^2 \approx d_e^2 ln s/ln\tau
 \end{equation}
 where $s \approx (F/af)^2 \approx 496^2 $ is compatible with the mass ratio Brout-Englert-Higgs-Boson/Electron, corresponding to 125.6 GeV, and, in the Topological Axis to $k \approx \pi $, and $n \approx \gamma \Gamma$ (Fig. 1).
-From the observation (0.04 \% and 3\%):
+
+With $\delta^{\prime} = p_K^2/a^3 $, and the symmetrised Planck area $(l_P^{\prime})^2 = \sqrt{h \hbar} G/c^3$ (11, -11 ppm, and 0.04 \%):
 \begin{equation}
-\tau^{137} \approx \mu^{210} /4\pi \approx O_M^9
+\pi^{-1/2}(R_{GC}/l_P^{\prime})^4/ \approx (\delta^{\prime} O_M )^9 \approx (4\pi)^{1/2}  \mu^{210} \approx \tau^{137}
 \end{equation}
-the Extended Holic Principle (section 6) cannot be denied. Moreover, with $\pi_0 = (7(35^2-1)-(2^7-1)/3 \times 7 \times 2^7)$, where the Combinatorial Hierarchy terms appear, the deviation reduces to 112 ppb; \textit{the intervention of $\pi$ - rationalisation cannot be denied}.
+The existence of a Final Theory based on the Holic Principle (section 6), the Grandcosmos and the Koide-Sanchez constant cannot be denied. The interpretation is clear: the 4D space-time in Grandcosmos is associated with a 9D space involving the Monster. \textit{This opens a path towards the Final Theory}. 
 
 
 \section {Discussion}
@@ -1306,7 +1290,7 @@ cosmology is the basis of United Science.
 they are optimal basis of computation tied with the Holographic Principle and its arithmetic form,
 the Holic Principle, which explains why normal space has 3 dimensions.
 \item 5/ The necessity of the Cosmos vasteness, resulting from holographic scanning and the rationalisation of $e$ and $\pi$
-\item 6/ The acceleration of expansion, which was predicted by the Eddington's \textit{invariant} cosmological constan $1/R^2$, is tied to a repulsive force proportional to distance, leading to \textit{exponential} recession. there is no need of the so-called 'dark energy'.
+\item 6/ The acceleration of expansion, which was predicted by the Eddington's \textit{invariant} cosmological constant $1/R^2$, is tied to a repulsive force proportional to distance, leading to \textit{exponential} recession. there is no need of the so-called 'dark energy'.
 \item 7/ The very existence of dark matter is proven, from the number of neutrons in the trivial fraction 3/10 of the visible Universe critical mass, which identifies with the very symmetric Eddington's number $136 \times 2^{256}$. The nature of dark matter would be simply an anti-phase matter-antimatter oscillation \cite{Sanchez1}.  
 \item 8/ The introduction of the Topon in the Holographic Principle justifies at last the $10^{122}$ gap between vacuum energy and that of the visible Universe.
 \item 9/ The grandcosmos is huge but not infinite, in conformity with the Cosmological Computational Principle.
@@ -1320,7 +1304,6 @@ It is now clear that present mathematics and Particle Physics are incomplete, an
 
       This article leads to some predictions:
 \item 1/  The very large infra-red telescopes in preparation will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the \textit{already refuted} standard evolutionary model.
-\item 1/ The CMB temperature will show invariance
 \item 2/ The Particle Physics will integrate the Koide relation and introduce massive gluons and composite quark down.
 \item 3/ Informatics software should  be boosted by the principle of multi-base computation.
 \item 4/ The multiple connexions with the DNA chain seems to imply it is a 1D hologram. Recent studies \cite{Widom} are on this way. 
@@ -1403,6 +1386,10 @@ connection''. Astrophys. Space Sci. 285(2):429 (2006).
 Pioneer anomaly''. Pi Class. Quant. Grav. 22, 5345-5354 (2005);
 arXiv:ge-qc/0507052.
 
+\bibitem{Sanchez4} Sanchez Francis M. (Sept 1995), Entelechies, Proceedings of the 16th Annual International meeting of ANPA held at the Univeristy of Cambridge, K.G. Bowden Editor, Holic Principle: The coherence of the Universe, 324--344
+
+\bibitem{Grosmann} Grosmann, Michel and Meyrueis, Patrick. ``Optics and Photonics Applied to Communication and Processing''. SPIE.  Jan 1979
+
 \bibitem{Borcherds} Borcherds and Richard. ``Monstruous Moonshine and Monstruous Lie
 Superalgebras''. Invent. Math. 109, 405--444 (1992).
 
@@ -1427,8 +1414,14 @@ Forum conference (2018); www.heidelberg-laureate-forum.org/blog/video/lecture-mo
 \bibitem{Conway} Conway J.H. and Norton S.P. ``Monstrous Moonshine''. Bull. London
 Math. Soc. 11(3) 308--339 (1979)
 
+\bibitem{Janko} Janko Zvonimir, ``Some new simple groups of finite order``. I, Symposia Mathematica (INDAM, Rome, 1967/68) Academic Press, London, 1969, pp. 25–64. MR 0244371
+
+\bibitem{Janko1} Janko Zvonimir, « A new finite simple group with abelian Sylow subgroups and its characterization », Journal of Algebra, vol. 32, 1966, p. 147-186
+
 \bibitem{Koide} Koide Y. ``Fermion-Boson two-body model of quarks and leptons and
 Cabibbo mixing''.  Lett. Nuovo Cimento 34, 201 (1982).
+
+\bibitem{Brannen} Brannen C.A. ``The Lepton Masses``, http://brannenworks.com/MASSES2.pdf, (2006).
 
 \bibitem{Polchinski} Polchinski J. ``String Theory'', vol. 1, p. 22 (Cambridge
 University Press, 1998).
@@ -1456,13 +1449,7 @@ d'espace d'une wustite de tri-incommensurabilite cubique est sur les groupes de
 Bravais de sa famlille cristalline dans l'espace euclidien a six dimensions''.
 Compt. Rend. Acad. Sci. Paris 305, Ser. II, 349--352 (1987).
 
-\bibitem{Atiyah2} Atiyah M. Private communication (December 2018). 
-
-\bibitem{Brannen} C.A. Brannen, The Lepton Masses, http://brannenworks.com/MASSES2.pdf, (2006).
-
-\bibitem{Grosmann} Grosmann, Michel and Meyrueis, Patrick. ``Optics and Photonics Applied to Communication and Processing''. 01.1979
-
-\bibitem{Sanchez4}Sanchez F M (1995), Holic Principle, ANPA Proc. (Cambridge) 16, 324
+\bibitem{Atiyah2} Atiyah Michael, ``Private communication`` (December 2018). 
 
 \end{thebibliography}
 \vspace*{-6pt}
