--- a/main.tex
+++ b/main.tex
@@ -25,7 +25,7 @@
 
 
 \begin{document}
-\begin{tableofcontents}
+%\begin{tableofcontents}
 %\begin{sloppypar}
 
 \renewcommand{\refname}{References}
