--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,7 @@
 
 \begin{document}
 %\begin{tableofcontents}
-%\begin{sloppypar}
+\begin{sloppypar}
 
 \renewcommand{\refname}{References}
 \renewcommand{\tablename}{\small Table}
@@ -1455,5 +1455,5 @@ Compt. Rend. Acad. Sci. Paris 305, Ser. II, 349--352 (1987).
 \vspace*{-6pt}
 \centerline{\rule{72pt}{0.4pt}}
 
-%\end{sloppypar}
+\end{sloppypar}
 \end{document}
