--- a/test.tex
+++ b/test.tex
@@ -693,7 +693,7 @@ A Holographic Principle has been coined by some theoricians \cite{Bousso}, the n
 \subsection{The Conservation of Information}
 
 The Grandcosmos holographic reduction radius $R^{\prime}$ shows itself an overwhelming holographic
-relation with the CMB Wien wavelength $l_{CMB}$, to $0.01\%$:
+relation with the CMB Wien wavelength $l_{CMB} = hc/kTw $, with $w = 5 (1-e^{-g}) \approx 4.965114245)$ to $0.01\%$:
 \begin{equation}
 4\pi(R^{\prime}/l_{CMB})^{2} \approx e^{a}
 \end{equation}
@@ -709,6 +709,12 @@ the Planck length as unit.
 So, while General Relativity and Unitary Quantum physics disagree about the nature of Space-Time, specially the non-locality phenomena, they agree for complete determinism, leading to the collapse of the
 Copenhagen statistical interpretation. The hidden variables exist really: it is the Cosmos ! Heisenberg
 relations would be only Fourier transform manifestations of Wave Mechanics.
+
+The wien wavelength enters (0.03 \%):
+\begin{equation}
+l_{CMB} / \lambdabar_e \approx P/pH a^3
+\end{equation}
+showing evidence for the invariance of the cosmic temperature, and confirmed in the following section. 
 
 \subsection{The Cosmic Temperature}
 
@@ -889,6 +895,11 @@ so connecting $O_M$ and $O_B$, since $61/2 \approx F/a^{2}$ to 0.04 \%, and intr
 
 \subsection{The intervention of Sporadic Groups}
 
+With the tachyonic ratio $Q = R_{GC}/R = C/c$, the cardinal orders of the two giant sporadic groups enter (63 and 2 ppm)
+\begin{equation}
+\pi Q/a \approx O_M D n/H \approx O_B P a^{3/2}
+\end{equation}
+where $D = 196883$ is the Moonshine dimension of the Monster group.
 The above term $O_M^3$ appears in (0.08\%, 2.5\%,1\%, 2\% and 61 ppm):
 \begin{equation}
 e^{137e}\approx (e/3)e^{ea}\approx O_M^3 \approx 496^{60} \approx fe^{16e^\pi} \approx f^{4d137/\pi}
@@ -1079,11 +1090,15 @@ confirming the holic attribution (section 6) of power 7 for a field parameter, a
 \begin{equation}
 Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \end{equation}
-confirmed by its ppb liaison with the Janko pariah group $J_3$
+This value is confirmed (30 ppb), with the above tachyonic ratio $Q$ and the Planck Wien term $5/w$ (section 7.1):
+\begin{equation}
+Q \approx 48 O_M Z
+\end{equation}
+the Z value is also confirmed by its ppb liaison with the Janko pariah group $J_3$ \cite{Janko}
 \begin{equation}
 J_3 \approx 3\pi^2 Z^2 / (137^2 + \sqrt{1+d_e})
 \end{equation}
-This enligth a liaison between the monster and the $J_3$ cardinals, while these two groups have no known relations:
+This enligths a liaison between the monster and the $J_3$ cardinals, while these two groups have no known relations:
 \begin{equation}
 O_M \approx d_e J_3^7 \sqrt(p/p_0)
 \end{equation}
@@ -1142,7 +1157,7 @@ where $s \approx (F/af)^2 \approx 496^2 $ is compatible with the mass ratio Brou
 
 With $\delta^{\prime} = p_K^2/a^3 $, and the symmetrised Planck area $(l_P^{\prime})^2 = \sqrt{h \hbar} G/c^3$ (11, -11 ppm, and 0.04 \%):
 \begin{equation}
-\pi^{-1/2}(R_{GC}/l_P^{\prime})^4/ \approx (\delta^{\prime} O_M )^9 \approx (4\pi)^{1/2}  \mu^{210} \approx \tau^{137}
+\pi^{-1/2}(R_{GC}/l_P^{\prime})^4 \approx (\delta^{\prime} O_M )^9 e^{1/2a} \approx (4\pi)^{1/2}  \mu^{210} \approx \tau^{137}
 \end{equation}
 The existence of a Final Theory based on the Holic Principle (section 6), the Grandcosmos and the Koide-Sanchez constant cannot be denied. The interpretation is clear: the 4D space-time in Grandcosmos is associated with a 9D space involving the Monster. \textit{This opens a path towards the Final Theory}. 
 
